--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,13 @@
   display: block;
   padding: 10px 20px;
   color: #fff;
-  text-decoration: underline overline;
+  text-decoration: none;
   background-color: #000;
 }
 
+#main-navbar a:hover {
+  text-decoration: underline overline;
+}
 
 #sidebar {
   position: fixed;
