--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,15 @@
   right: 50%;
 }
 
-#main-navbar a {
+#main-navbar ul li a {
   display: block;
   padding: 10px 20px;
   color: #fff;
-  text-decoration: none !important;
+  text-decoration: none;
   background-color: #000;
 }
 
-#main-navbar a:hover {
+#main-navbar ul li a:hover {
   text-decoration: underline overline;
 }
 
